added game object
