# api/src/player/types.ts
@@ -1,0 +1,6 @@
+export interface Player {
+    name: string;
+    avarta: string;
+    balance: number;
+    sbtBalance: number;
+}
