# api/src/swagger/swagger.json
@@ -6,6 +6,137 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Game": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"logoURL": {
+						"type": "string"
+					},
+					"balance": {
+						"type": "number",
+						"format": "double"
+					},
+					"description": {
+						"type": "string"
+					},
+					"sbtAmount": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"logoURL",
+					"balance",
+					"description",
+					"sbtAmount"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SbtCollectible": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"requirement": {
+						"type": "string"
+					},
+					"value": {
+						"type": "number",
+						"format": "double"
+					},
+					"holder": {
+						"type": "number",
+						"format": "double"
+					},
+					"progress": {
+						"type": "number",
+						"format": "double"
+					},
+					"gameId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"requirement",
+					"value",
+					"holder",
+					"progress",
+					"gameId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Player": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"avarta": {
+						"type": "string"
+					},
+					"balance": {
+						"type": "number",
+						"format": "double"
+					},
+					"sbtBalance": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"avarta",
+					"balance",
+					"sbtBalance"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Challenge": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"reward": {
+						"type": "string"
+					},
+					"status": {
+						"type": "string"
+					},
+					"player": {
+						"items": {
+							"$ref": "#/components/schemas/Player"
+						},
+						"type": "array"
+					},
+					"progress": {
+						"type": "number",
+						"format": "double"
+					},
+					"gameId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"reward",
+					"status",
+					"player",
+					"progress",
+					"gameId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Native": {
 				"properties": {
 					"balance": {
@@ -197,6 +328,84 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/game": {
+			"get": {
+				"operationId": "GameList",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Game"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/game/collectible/{gameId}": {
+			"get": {
+				"operationId": "Collectible",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SbtCollectible"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "gameId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/game/challenge/{gameId}": {
+			"get": {
+				"operationId": "Challenge",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Challenge"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "gameId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/profile/{address}": {
 			"get": {
 				"operationId": "GetProfile",
